BUILDENV: Updated failing test class and junit 4 to junit 5 for ts-diabetes